--- a/ponmani.html
+++ b/ponmani.html
@@ -18,6 +18,13 @@
    <div class="four">
     <h1>four</h1>
     </div>
+    <div class="five">
+     <h1>five</h1>
+     </div>
+     <div class="six">
+      <h1>six</h1>
+      </div>
+
 
 </body>
 </html>
